feat/standardlizationToCustomErrorCode
